src/templates/css/style.css
body {
    margin: 0;
    padding: 0;
    color: #333;
    font-family: 'Roboto', sans-serif;
    background-color: #e6e9ee;
    font-weight: 400;
    line-height: 1.5;
    min-width: 1165px;
}

h1, h2, h3, h4, h5, h6 {
    text-align: center;
    font-size: 15px;
    line-height: 1.5;
    font-weight: 300;
    text-transform: none;
}

.center {
    margin: auto;
    max-width: 1140px;
}

table {
    width: 100%;
    border-spacing: 0;
    background-color: #000;
}

tr, li, #pages, .info {
    font-family: 'Roboto', sans-serif;
    font-size: 15px;
    line-height: 2;
    font-weight: 100;
}

td {
    border-top: 1px solid #050505;
}

table.net_info tr:hover td {
    background-color: #000000;
    border-top: 1px solid #000!important;
}

table.net_info tr td {
    background-color: #000000;
    border-top: 1px solid #000!important;
}

table.net_info tr:first-of-type {
    font-size: 24px;
    font-weight: 400;
}

table.center {
    margin-left: auto;
    margin-right: auto;
}

#pages {
    margin-top: 15px;
}

td {
    text-align: center;
}

a:link {
    text-decoration: none;
    color: #2ab1f3;
}

a:visited {
    text-decoration: none;
    color: #2ab1f3;
}

a:hover {
    text-decoration: underline;
    color: #2ab1f3;
}

a:active {
    text-decoration: none;
    color: #2ab1f3;
}

form {
    display: inline-block;
    vertical-align: middle;
    text-align: center;
}

.style-1 input[type="text"] {
    padding: 10px;
    font-size: 14px;
    border: solid 1px #ddd;
    background-color: #f2f2f2;
    transition: box-shadow 0.3s, border 0.3s;
    color: #262626;
}

.style-1 input[type="text"]:focus, .style-1 input[type="text"].focus {
    border: solid 1px #707070;
    box-shadow: 0 0 5px 1px #969696;
}

.style-1 input[type="submit"] {
    min-height: 36px;
    border: none;
    -webkit-appearance: none;
    padding: 10px;
    color: #fff;
    background-color: #2ab1f3;
    text-transform: uppercase;
    font-size: 14px;
}

.tabs {
    position: relative;
    min-height: 220px;
    /* This part sucks */
    clear: both;
    margin: 25px 0;
}

.tab {
    float: left;
}

.tab label {
    background: #f3f4f7;
    padding: 10px;
    border: 1px solid #e6e9ee;
    margin-left: -1px;
    position: relative;
    left: 1px;
}

.tab [type=radio] {
    display: none;
}

.content {
    position: absolute;
    top: 32px;
    left: 0;
    background: #fff;
    right: 0;
    bottom: 0;
    padding: 20px;
    min-height: 215px;
    border-radius: 4px;
    box-shadow: 0 1px 1px rgb(0 0 0 / 5%);
}

[type=radio]:checked~label {
    background: #FFF;
    border-bottom: 0px;
    z-index: 2;
}

[type=radio]:checked~label~.content {
    z-index: 1;
}

input#toggle-1[type=checkbox] {
    position: absolute;
    /*top: -9999px;*/
    left: -9999px;
}

label#show-decoded-inputs {
    /*-webkit-appearance: push-button;*/
    /*-moz-appearance: button;*/
    display: inline-block;
    /*margin: 60px 0 10px 0;*/
    cursor: pointer;
    background-color: black;
    ;
    color: white;
    width: 100%;
    text-align: center;
}

div#decoded-inputs {
    display: none;
}

/* Toggled State */

input#toggle-1[type=checkbox]:checked~div#decoded-inputs {
    display: block;
}

header {
    background-color: #293c49;
    height: 100px;
    display: flex;
    align-items: center;
    min-width: 1180px;
}

header img {
    margin: 10px 20px 10px 0;
    max-width: 250px;
    display: inline-block;
    vertical-align: middle;
}

html {
    font-family: 'Roboto', sans-serif;
    -webkit-font-smoothing: antialiased;
    text-rendering: optimizeLegibility;
}

.topup {
    width: 18px;
    height: 18px;
    background-repeat: no-repeat;
    background-size: 18px 18px;
    padding-right: 10px;
}

.panel {
    margin-bottom: 20px;
    background-color: #FFF;
    border: 1px solid transparent;
    border-radius: 4px;
    -webkit-box-shadow: 0 1px 1px rgb(0 0 0 / 5%);
    box-shadow: 0 1px 1px rgb(0 0 0 / 5%);
    max-width: 1200px;
}

.panel-heading {
    padding: 10px 15px;
    border-bottom: 1px solid transparent;
    border-top-right-radius: 3px;
    border-top-left-radius: 3px;
}

.panel-bm.panel {
    border: 0;
}

.panel-bm .panel-heading {
    background-color: #f3f4f7;
    border-color: #ddd;
    border-bottom: 0;
    line-height: 21px;
    padding: 10px 20px;
}

.panel-bm .panel-body {
    padding: 20px;
    font-size: 14px;
}

.panel-bm .panel-heading-title {
    color: #000;
    font-size: 16px;
}

.abstract-section:first-child {
    border-right: 1px solid #e6e9ee;
    padding-right: 50px;
}

.abstract-section:last-child {
    padding-left: 50px;
}

.abstract-section {
    float: left;
    line-height: 30px;
    width: 50%;
}

.clearfix:before, .clearfix:after, .dl-horizontal dd:before, .dl-horizontal dd:after, .container:before, .container:after, .container-fluid:before, .container-fluid:after, .row:before, .row:after, .form-horizontal .form-group:before, .form-horizontal .form-group:after, .btn-toolbar:before, .btn-toolbar:after, .btn-group-vertical>.btn-group:before, .btn-group-vertical>.btn-group:after, .nav:before, .nav:after, .navbar:before, .navbar:after, .navbar-header:before, .navbar-header:after, .navbar-collapse:before, .navbar-collapse:after, .pager:before, .pager:after, .panel-body:before, .panel-body:after, .modal-footer:before, .modal-footer:after {
    content: " ";
    display: table;
}

:before, :after {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

.clearfix:after, .dl-horizontal dd:after, .container:after, .container-fluid:after, .row:after, .form-horizontal .form-group:after, .btn-toolbar:after, .btn-group-vertical>.btn-group:after, .nav:after, .navbar:after, .navbar-header:after, .navbar-collapse:after, .pager:after, .panel-body:after, .modal-footer:after {
    clear: both;
}

:before, :after {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}
/* ... */

